logo and updates
Signed-off-by: Kevin Griffin <griffin.kev@gmail.com>

--- a/src/kelp/web/templates/base.html
+++ b/src/kelp/web/templates/base.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KELP - Key Event Log Parser</title>
+    <link rel="icon" type="image/svg+xml" href="/static/logo.svg">
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <header>
+        <img src="/static/logo.svg" alt="KELP" class="logo">
         <h1>KELP</h1>
         <span class="subtitle">Key Event Log Parser</span>
     </header>
