--- a/src/kelp/web/templates/partials/main_content.html
+++ b/src/kelp/web/templates/partials/main_content.html
@@ -40,7 +40,6 @@
 </div>
 {% else %}
 <div class="empty-state">
-    <p>Enter an OOBI URL above to load events</p>
-    <p class="example">Example: http://65.21.253.212:5623/oobi/EINmHd5g7iV-UldkkkKyBIH052bIyxZNBn9pq-zNrYoS/witness</p>
+    <img src="/static/kelp-forest.svg" alt="" class="empty-state-bg">
 </div>
 {% endif %}
